fix(spec): default macroexpand-check off; opt in via JVM flag
After bootstrap, RT.CHECK_SPECS follows -Dclojure.spec.check-macros=true only (Cloffle default off, unlike stock skip-macros). Document :cloffle-java main and JVM flags in deps, CloffleMain, and CLOFFLE_NOTES.

Signed-off-by: The-Alchemist <karl@digital-alchemy.io>